crates/ridl-syntax/tests/snapshots/parser_err_corpus__ridl_err_corpus_is_lossless_reports_errors_and_matches_snapshots@garbage_in_interface.ridl.snap
---
source: crates/ridl-syntax/tests/parser_err_corpus.rs
expression: dump(&parsed)
input_file: crates/ridl-syntax/test_data/parser/err/garbage_in_interface.ridl
---
SourceFile@0..112
  PackageDecl@0..15
    PackageKw@0..7 "package"
    Whitespace@7..8 " "
    QualifiedName@8..15
      Ident@8..11 "veh"
      Dot@11..12 "."
      Ident@12..15 "err"
  Whitespace@15..17 "\n\n"
  InterfaceDef@17..111
    InterfaceKw@17..26 "interface"
    Whitespace@26..27 " "
    Name@27..33
      Ident@27..33 "Broken"
    Whitespace@33..34 " "
    LBrace@34..35 "{"
    Whitespace@35..38 "\n  "
    SignalDef@38..58
      SignalKw@38..44 "signal"
      Whitespace@44..45 " "
      Name@45..50
        Ident@45..50 "speed"
      Whitespace@50..51 " "
      Colon@51..52 ":"
      Whitespace@52..53 " "
      PathType@53..58
        QualifiedName@53..58
          Ident@53..58 "Speed"
    Whitespace@58..61 "\n  "
    ErrorNode@61..76
      RBracket@61..62 "]"
      Whitespace@62..63 " "
      Question@63..64 "?"
      Question@64..65 "?"
      Whitespace@65..66 " "
      Ident@66..73 "garbage"
      Whitespace@73..74 " "
      IntNumber@74..76 "12"
    Whitespace@76..79 "\n  "
    EventDef@79..109
      EventKw@79..84 "event"
      Whitespace@84..85 " "
      Name@85..95
        Ident@85..95 "doorOpened"
      Whitespace@95..96 " "
      Colon@96..97 ":"
      Whitespace@97..98 " "
      PathType@98..109
        QualifiedName@98..109
          Ident@98..109 "DoorPayload"
    Whitespace@109..110 "\n"
    RBrace@110..111 "}"
  Whitespace@111..112 "\n"
errors:
  FORM-102 61..62 unexpected token in an interface body
